# TransireVR

./: README.md  copylib.sh
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  apriltag_jni.cpp  apriltag_jni.h  camera2.h  camera2impl.cpp  example.cpp  log.h  native-lib.cpp  threadpool.h
Android/app/src/main/cpp/ndk/: helpers.cpp  helpers.h
Android/gradle/wrapper/: gradle-wrapper.properties
Unity/Assets/CustomAprilTags/: CustomAprilTags.unity
Unity/Assets/CustomAprilTags/Materials/: AlphaRed.mat
Unity/Assets/CustomAprilTags/Prefabs/: AprilTagDebugCube.prefab  Canvas.prefab
Unity/Assets/CustomAprilTags/Scripts/: AprilTagDebugCube.cs  AprilTagReader.cs  AprilTagWrapper.cs  SimpleKalmanFilter.cs
Unity/Assets/PassthroughCameraApiSamples/CameraViewer/: CameraViewer.unity
Unity/Assets/PassthroughCameraApiSamples/CustomAprilTags/: CustomAprilTags.unity
Unity/Assets/PassthroughCameraApiSamples/CustomAprilTags/Materials/: AlphaBlue.mat  Red.mat
Unity/Assets/PassthroughCameraApiSamples/CustomAprilTags/Prefabs/: AprilTagReader.prefab
Unity/Assets/PassthroughCameraApiSamples/CustomAprilTags/Scripts/: AprilTagDebugHelper.cs  (+2 more)
Unity/Assets/PassthroughCameraApiSamples/StartScene/: StartScene.unity
Unity/Assets/Plugins/Android/: AndroidManifest.xml
Unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Unity/Assets/XR/Settings/: OpenXR Package Settings.asset
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UnityPluginPackage/: package.json
(+17 files in other folders)
